--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -50,14 +50,13 @@
     position: absolute;
     top: 50%;
     right: 0;
-    
+
     &,
     &::before,
     &::after {
       display: inline-block;
       width: 24px;
       height: 2px;
-      background-color: var(--pseudoEl, #fff);
     }
 
     &::before,
@@ -66,6 +65,7 @@
       position: absolute;
       right: 0;
       transition: all 0.2s;
+      background-color: var(--pseudoEl, #fff);
     }
 
     &::before {
@@ -112,64 +112,64 @@
 
     &.open {
       opacity: 1;
-    }
-  }
 
-  &__navbar {
-    width: 20%;
-    height: 70vh;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+      .navigation__navbar {
+        width: 20%;
+        height: 70vh;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        transform: translateX(-50%);
+      }
 
-  &__list {
-    height: auto;
-    text-align: center;
-  }
+      .navigation__list {
+        height: auto;
+        text-align: center;
+      }
 
-  &__item {
-    display: block;
-    width: auto;
-    height: calc(100% / 7);
-    min-height: 50px;
-    color: $color-white;
-    opacity: 0;
+      .navigation__item {
+        display: block;
+        width: auto;
+        height: calc(100% / 7);
+        min-height: 50px;
+        color: $color-white;
+        opacity: 0;
 
-    animation: fadeIn 2s forwards;
-    animation-delay: 0.3s;
+        animation: fadeIn 2s forwards;
+        animation-delay: 0.3s;
 
-    &:nth-of-type(2) {
-      animation-delay: 0.6s;
-    }
+        &:nth-of-type(2) {
+          animation-delay: 0.6s;
+        }
 
-    &:nth-of-type(3) {
-      animation-delay: 0.8s;
-    }
+        &:nth-of-type(3) {
+          animation-delay: 0.8s;
+        }
 
-    &:nth-of-type(4) {
-      animation-delay: 1s;
-    }
+        &:nth-of-type(4) {
+          animation-delay: 1s;
+        }
 
-    &:nth-of-type(5) {
-      animation-delay: 1.2s;
-    }
+        &:nth-of-type(5) {
+          animation-delay: 1.2s;
+        }
 
-    &:nth-of-type(6) {
-      animation-delay: 1.4s;
-    }
+        &:nth-of-type(6) {
+          animation-delay: 1.4s;
+        }
 
-    &:nth-of-type(7) {
-      animation-delay: 1.6s;
-    }
+        &:nth-of-type(7) {
+          animation-delay: 1.6s;
+        }
 
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
+        &:not(:last-child) {
+          margin-bottom: 20px;
+        }
 
-    a {
-      font-size: 30px;
+        a {
+          font-size: 30px;
+        }
+      }
     }
   }
 
@@ -235,8 +235,7 @@
 
 /* breakpoint 1660px */
 @media screen and (min-width: 1660px) {
-  
-    .big-border-overlay.visible {
+  .big-border-overlay.visible {
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -257,7 +256,7 @@
     border-top: 100px solid;
     border-right: 100px solid;
     border-bottom: 100px solid;
-    border-image: linear-gradient(45deg, #317ade, #0e3378) 1;    
+    border-image: linear-gradient(45deg, #317ade, #0e3378) 1;
     z-index: 6;
     transition: all 0.5s;
   }
@@ -279,7 +278,7 @@
       z-index: 10;
       transition: all 0.5s;
 
-      &.hover {
+      &.closed.hover {
         .navigation__button::after {
           letter-spacing: 7px;
         }
@@ -339,7 +338,7 @@
     }
 
     &__modal-menu {
-      &.open {        
+      &.open {
         background-image: none;
         z-index: 6;
       }
